--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,33 @@
+/* Universal Box Sizing */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* All body semantics background-color */
 body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* Header Font and Format */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,24 +35,27 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header div ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* Hyper link coloration and text decoration */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* Paragraph font size */
 p {
     font-size: 16px;
 }
 
+/* Background Image for Webpage */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +65,7 @@ p {
     background-position: center;
 }
 
+/* Floaters */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -69,12 +76,14 @@ p {
     margin-left: 25px;
 }
 
+/* Content Inline-Block */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Benefits selectors */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -134,6 +143,7 @@ p {
     max-width: 150px;
 }
 
+/* Text links- font, size, color, and background color */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -188,6 +198,7 @@ p {
     font-size: 36px;
 }
 
+/* Footer font and size */
 .footer {
     padding: 30px;
     clear: both;
