--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,16 +18,16 @@ header {
     color: #ffffff;
 }
 
-header h1 {
+.navigation h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-header h1 .seo {
+#seo {
     color: #d9dcd6;
 }
 
-header div {
+.navigation nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -35,16 +35,16 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+.navigation nav ul {
     list-style-type: none;
 }
 
-header div ul li {
+.navigation nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* Hyper link coloration and text decoration */
+/* anchor link coloration and text */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -56,7 +56,7 @@ p {
 }
 
 /* Background Image for Webpage */
-.hero {
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
