--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,24 @@
-/* Universal Box Sizing */
+/* Universal border-box sizing */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* All body semantics background-color */
+/* All body background-color */
 body {
     background-color: #d9dcd6;
 }
 
-/* Header Font and Format */
-header {
+/* Header font and format */
+.header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.navigation h1 {
+.header h1 {
     display: inline-block;
     font-size: 48px;
 }
@@ -27,7 +27,7 @@ header {
     color: #d9dcd6;
 }
 
-.navigation nav {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -35,16 +35,16 @@ header {
     font-size: 20px;
 }
 
-.navigation nav ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.navigation nav ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* anchor link coloration and text */
+/* Anchor link coloration and text */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -55,7 +55,7 @@ p {
     font-size: 16px;
 }
 
-/* Background Image for Webpage */
+/* Background image for webpage */
 #hero {
     height: 800px;
     width: 100%;
@@ -76,14 +76,14 @@ p {
     margin-left: 25px;
 }
 
-/* Content Inline-Block */
+/* Content inline-block */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/* Benefits selectors */
+/* Benefits class for side section */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -95,48 +95,22 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
+.benefit-lead h3,
+.benefit-brand h3,
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
     display: block;
     margin: 10px auto;
@@ -144,24 +118,8 @@ p {
 }
 
 /* Text links- font, size, color, and background color */
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
+.search-engine-optimization,
+.online-reputation-management,
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -171,28 +129,14 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
